@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-13T12:40:23Z",
-  "count_outdated" : 8270,
-  "uniques_outdated" : 3706,
+  "timestamp" : "2024-09-14T12:38:32Z",
+  "count_outdated" : 8277,
+  "uniques_outdated" : 3712,
   "count" : 8299,
   "uniques" : 3733,
   "clones" : [
-    {
-      "timestamp": "2024-08-31T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 5, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 5, 6 ],
-      "uniques_decinc": [ 0, 6 ]
-    },
     {
       "timestamp": "2024-09-01T00:00:00Z",
       "count": 1,
