@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 23,
+  "count": 22,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2024-08-31T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2024-09-01T00:00:00Z",
       "count": 1,
