@@ -1,3 +1,12 @@
+2024-09-14T12:38:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10862469621 # 529
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-14
+* notice: last 14d: unq all: 17 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 3706 8270 / 3733 8299
+* notice: next accum: outdated-unq outdated-all / unq all: 3712 8277 / 3733 8299
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-31] / []
+
 2024-09-13T12:40:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10849281559 # 527
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-13
